--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </script>
     <link rel="stylesheet" href="/style.css">
     <body bgcolor=#5ae038>
-        <h1 class="name">Conley <3!!!!!!</h1>
+        <h1 class="name">Conley</h1>
         <a href="https://www.reddit.com/r/theconleysphere/" target="_blank">Fan Page</a>
     </body>
     <script src="baffle.js"></script>
